templates/6-enterprise-gke/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    template: templates/6-enterprise-gke
  name: workload-6-netpol
  namespace: workload-6
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: workload-6
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
